<resources>
    <string name="app_name">Simpus</string>
    <string name="content_description">Content Description</string>
    <string name="subtitle">Silahkan login untuk masuk aplikasi.</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="type_nik">Ketikan NIK</string>
    <string name="type_password">Ketikan password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_patient">Data Pasien</string>
    <string name="manage_patient">Manajemen data pasien</string>
    <string name="health_service">Layanan Kesehatan</string>
    <string name="immunization">Imunisasi\n</string>
    <string name="posyandu">Posyandu\n</string>
    <string name="posbindu">Posbindu\n</string>
    <string name="posyandu_balita">Posyandu\nBalita</string>
    <string name="search">Pencarian</string>
    <string name="search_hint">Cari</string>
    <string name="please_wait">Mohon tunggu..</string>
    <string name="title_home">home</string>
    <string name="title_profile">profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
</resources>