<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_patientFragment"
            app:destination="@id/patientFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/patientFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.PatientFragment"
        android:label="fragment_patient"
        tools:layout="@layout/fragment_patient" >
        <action
            android:id="@+id/action_patientFragment_to_addPatientFragment"
            app:destination="@id/addPatientFragment" />
        <action
            android:id="@+id/action_patientFragment_to_detailPatientFragment"
            app:destination="@id/detailPatientFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPatientFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.AddPatientFragment"
        android:label="fragment_add_patient"
        tools:layout="@layout/fragment_add_patient" />
    <fragment
        android:id="@+id/detailPatientFragment"
        android:name="id.go.kebumenkab.simpus.ui.fragment.DetailPatientFragment"
        android:label="DetailPatientFragment"
        tools:layout="@layout/fragment_detail_patient"/>
</navigation>