<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:fillViewport="true"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="256dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/labelTitle"
            style="@style/TextView.PoppinsBold22sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/labelSubtitle"
            style="@style/TextView.PoppinsRegular14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            app:layout_constraintEnd_toEndOf="@+id/labelTitle"
            app:layout_constraintStart_toStartOf="@+id/labelTitle"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/nik"
            style="@style/EditText"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="@+id/labelSubtitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/labelSubtitle"
            app:layout_constraintTop_toBottomOf="@+id/labelSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextView.PoppinsRegular14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="16"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditText"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="@+id/editNik"
            app:layout_constraintStart_toStartOf="@+id/editNik"
            app:layout_constraintTop_toBottomOf="@+id/editNik">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextView.PoppinsRegular14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/transparent" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            style="@style/Button.Main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>